--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,8 @@
         "symfony/yaml": "^6.3",
         "twig/extra-bundle": "^3.3",
         "twig/intl-extra": "^3.3",
-        "twig/markdown-extra": "^3.3"
+        "twig/markdown-extra": "^3.3",
+        "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
         "dama/doctrine-test-bundle": "^7.0",
